style: fix alignment issues on compare button

--- a/css/fashionmen.css
+++ b/css/fashionmen.css
@@ -272,6 +272,7 @@ div[preview] {
 
 .preview .box div img {
   width: 13em;
+  height:17.5rem;
 }
 
 div[preview] .news-one img,
